--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "env-cmd -f .env vite",
-    "build": "env-cmd -f .env vite build",
+    "dev": " vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
